--- a/writeup/multispeciesLink/multispeciesLink.tex
+++ b/writeup/multispeciesLink/multispeciesLink.tex
@@ -103,13 +103,22 @@ where $W_k$ is an indicator of whether an augmented species exists or not in the
 %
 For $y_{ik} = 1$, $Z_{ik} = 1$.\\
 \\
-For $y_{ik} = 0$
+For $y_{ik} = 0$ and $W_k = 1$
 \begin{align*}
   [Z_{ik} | \cdot] & \propto [y_{ik} | J, p_k]^{Z_{ik}} I \{y_{ik} = 0 \}^{(1 - Z_{ik})} [Z_{ik} | \Psi]^{W_k} I \{Z_{ik} = 0 \}^{(1 - W_{k})}\\
   & \propto (1 - p_k)^{J Z_{ik}} \Psi_k^{Z_{ik} W_k} (1 - \Psi_k)^{(1 - Z_{ik}) W_k}\\
-  & \propto \left( (1 - p_k)^J \Psi_k^{W_k} \right)^{Z_{ik}} \left((1 - \Psi_k)^{W_k} \right)^{(1 - Z_{ik})}\\
+  & \propto \left( (1 - p_k)^J \Psi_k \right)^{Z_{ik}} \left(1 - \Psi_k \right)^{(1 - Z_{ik})}\\
 \end{align*}
-which is Bern($\tilde{\Psi}_k$) where $\tilde{\Psi}_k = \left( (1 - p_k)^J \Psi_k^{W_k} \right) / \left( (1 - p_k)^J \Psi_k^{W_k} + (1 - \Psi_k)^{W_k}\right)$\\
+which is Bern($\tilde{\Psi}_k$) where $\tilde{\Psi}_k = \left( (1 - p_k)^J \Psi_k \right) / \left( (1 - p_k)^J \Psi_k + (1 - \Psi_k)\right)$\\
+\\%
+For $y_{ik} = 0$ and $W_k = 0$
+\begin{align*}
+  [Z_{ik} | \cdot] & \propto [y_{ik} | J, p_k]^{Z_{ik}} I \{y_{ik} = 0 \}^{(1 - Z_{ik})} [Z_{ik} | \Psi]^{W_k} I \{Z_{ik} = 0 \}^{(1 - W_{k})}\\
+  & \propto (1 - p_k)^{J Z_{ik}} \Psi_k^{Z_{ik} W_k} (1 - \Psi_k)^{(1 - Z_{ik}) W_k}\\
+  & \propto ((1 - p_k)^J)^{Z_{ik}}\\
+\end{align*}
+which is Bern($(1 - p_k)^J$)\\
+\\
 %
 \subsection{$p_k$}
 %
