--- a/writeup/multispecies_modeling_DorazioNotation.tex
+++ b/writeup/multispecies_modeling_DorazioNotation.tex
@@ -13,7 +13,7 @@
 \usepackage{natbib}
 \def\bm#1{\mbox{\boldmath $#1$}}
  
-\title{Multispecies Model}
+\title{Multispecies Model- Dorazio Notation}
 \author{Kristin Broms, Viviana Ruiz-Guiterrez, John Tipton}
 \date{\today}
 %
